# wt

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/rules/: cli-args.md  cli-norms.md  command-pattern.md  testing.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  decisions.md  git-workflow.md
src/: cli.rs  commands.rs  config.rs  fuzzy.rs  git.rs  main.rs  terminal.rs  tui.rs  worktree.rs
src/commands/: clone.rs  completions.rs  init.rs  init_shell.rs  link.rs  list.rs  mod.rs  new.rs  path.rs  prune.rs  rm.rs  switch.rs  tui.rs  unlink.rs
tests/: clone.rs  completions.rs  init.rs  integration.rs  link.rs  list.rs  new.rs  path.rs  prune.rs  rm.rs  switch.rs  tui.rs  unlink.rs
tests/common/: mod.rs
