[package]
name = "wt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
getrandom = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
